后端请求首页

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,16 @@
     <title>FunBooks</title>
     <link rel="stylesheet" href="./stylesheets/reset.css">
     <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="shortcut icon" href="http://www.google.com/favicon.ico" />
   </head>
   <body >
     <div id="app" >
       <h1>FunBooks</h1>
       <div id='sign'>
-        <a href="">sign in</a>
+        <a href="#!/login">sign in</a>
+      </div>
+      <div class="pull-right">
+        <a href="#!/cart">xx in Cart</a>
       </div>
       <div ng-view>
       </div>
