--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,7 @@
   <body >
     <div id="app" >
       <h1>FunBooks</h1>
-      <div id='sign'>
-        <a href="#!/login">sign in</a>
-      </div>
-      <div class="pull-right">
-        <a href="#!/cart">xx in Cart</a>
-      </div>
-      <div ng-view>
+      <div ng-view="a">
       </div>
      
     </div>
