--- a/public/javascripts/detail.html
+++ b/public/javascripts/detail.html
@@ -1,4 +1,5 @@
 <div id="detail">
+  <sign></sign>
   <div class="detail-body">
     <div>
       <img src="../../../images/book1.jpg" alt="">
@@ -13,8 +14,8 @@
     </ul>
     <div>
       <p>
-          <span>Quantily:</span>
-          <input type="number">
+        <span>Quantily:</span>
+        <input type="number">
       </p>
       <button>Add to Cart</button>
     </div>
