--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
   </head>
   <body >
     <div id="app" >
-      <h1>FunBooks</h1>
+      <h1>
+        <a href="#!/">FunBooks</a> 
+      </h1>
       <div ng-view="a">
       </div>
      
