--- a/public/javascripts/bookCart.html
+++ b/public/javascripts/bookCart.html
@@ -1,20 +1,34 @@
 <div>
-    <sign></sign>
+  <sign></sign>
   <h2>shopping cart</h2>
-  <ul class='li-inline'>
+  <ul class='li-inline cart-title'>
     <li>price</li>
     <li>quantity</li>
   </ul>
-  <ul>
-    <li>
-      <book-item></book-item>
-    </li>
-  </ul>
+  <div class='cart-body'>
+    <ul ng-repeat="book in cartCtrl.cart"  class='bookItem'>
+      <li>
+        <img ng-src="../{{book.coverImage}}">
+      </li>
+      <li>
+        <p>{{book.title}}</p>
+        <p>
+          <span ng-repeat="author in book.authorList">{{author}} </span>
+        </p>
+      </li>
+      <li>
+        <p>${{book.price}}</p>
+      </li>
+      <li>
+        <input type='number' ng-model="book.quantity" ng-change="cartCtrl.updateCart(book._id,book.quantity)">
+    </ul>
+  </div>
+
   <div>
-    <span>Cart subtotal(xx item)</span>
-    <span>$xx</span>
+    <h2>Cart subtotal({{cartCtrl.totalNum}} item) <span>${{cartCtrl.totalPrice}}</span></h2>
+   
   </div>
   <div>
-    <button>Proceed to check out</button>
+    <button ng-click="cartCtrl.toPay()">Proceed to check out</button>
   </div>
 </div>
